--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,33 +2,33 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @media (max-width: 1280px) {
-	html {
-		font-size: calc((16 / 768) * 100vw);
-	}
+  html {
+    font-size: calc((16 / 768) * 100vw);
+  }
 }
 
 @media (max-width: 640px) {
-	html {
-		font-size: calc((16 / 430) * 100vw);
-	}
+  html {
+    font-size: calc((16 / 430) * 100vw);
+  }
 }
 
 *::-webkit-scrollbar {
-    background-color:#F8F8F8;
-    width: 1rem;
+  background-color: #f8f8f8;
+  width: 1rem;
 }
 
 *::-webkit-scrollbar-track {
-    background-color: #F8F8F8;
+  background-color: #f8f8f8;
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: rgba(87, 87, 103, 0.3);
-    border-radius: 1rem;
-    border: 0.35rem solid #F8F8F8;
+  background-color: rgba(87, 87, 103, 0.3);
+  border-radius: 1rem;
+  border: 0.35rem solid #f8f8f8;
 }
 
-*::-webkit-scrollbar-button {display:none}
-
+*::-webkit-scrollbar-button {
+  display: none;
+}
